packages/demo/src/styles/default/searchbars.css
/**
  * Lens Search Bar
  */
lens-search-bar-multiple::part(lens-searchbar-multiple) {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap-xs);
  align-items: center;
}

lens-search-bar-multiple::part(search-bar-wrapper) {
  display: flex;
  align-items: center;
  min-width: calc(50% - 5px);
  flex-grow: 1;
}

lens-search-bar-multiple::part(lens-searchbar):focus-within {
  border-color: var(--blue);
  border: solid 1px var(--blue);
  border-radius: var(--border-radius-small);
}

lens-search-bar-multiple::part(lens-searchbar) {
  position: relative;
  z-index: 1;
  align-items: center;
  background-color: var(--white);
  border: solid 1px var(--light-gray);
  border-radius: var(--border-radius-small);
  padding: 0 var(--gap-s);
  display: flex;
  flex-wrap: wrap;
  width: -webkit-fill-available;
}

lens-search-bar-multiple::part(lens-searchbar-or-indicator) {
  margin-left: var(--gap-xs);
  text-align: center;
  width: 40px;
}

lens-search-bar-multiple::part(lens-searchbar-chips) {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap-xs);
}

lens-search-bar-multiple::part(lens-searchbar-chip) {
  background-color: var(--blue);
  color: var(--white);
  border: solid 1px var(--lightest-gray);
  border-radius: var(--border-radius-small);
  width: max-content;
  padding: 0 var(--gap-xs);
  display: flex;
  align-items: center;
  gap: var(--gap-xs);
  position: relative;
}

lens-search-bar-multiple::part(lens-searchbar-chip-item) {
  display: inline-flex;
  align-items: center;
}

lens-search-bar-multiple::part(lens-searchbar-input) {
  box-sizing: border-box;
  padding: var(--gap-xs) var(--gap-s);
  min-width: 200px;
  flex-grow: 1;
  outline: none;
  border: none;
}

lens-search-bar-multiple::part(lens-searchbar-input-options-open) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

lens-search-bar-multiple::part(lens-searchbar-autocomplete-options) {
  max-height: 50vh;
  overflow: scroll;
  list-style-type: none;
  padding: var(--gap-s);
  margin: 0;
  border: solid 1px var(--blue);
  border-top: none;
  position: absolute;
  top: 30px;
  left: -1px;
  right: -1px;
  background-color: white;
  color: black;
  border-bottom-left-radius: var(--border-radius-small);
  border-bottom-right-radius: var(--border-radius-small);
}

lens-search-bar-multiple::part(lens-searchbar-autocomplete-options-item) {
  cursor: pointer;
}

lens-search-bar-multiple::part(lens-searchbar-autocomplete-options-item-focused) {
  color: coral;
}

lens-search-bar-multiple::part(lens-searchbar-add-button) {
  background-color: var(--green);
  color: var(--white);
  border: none;
  border-radius: var(--border-radius-small);
  padding: 0;
  font-size: var(--font-size-m);
  cursor: pointer;
  align-self: normal;
  line-height: 22px;
  width: 40px;
  margin-left: var(--gap-xs);
}


/**
* delete buttons in searchbar and chips
*/

lens-search-bar-multiple::part(query-delete-button) {
  background-color: var(--blue);
  color: var(--orange);
  cursor: pointer;
  padding: 0;
  border-radius: 50%;
  border: none;
  box-sizing: content-box;
  border: solid var(--blue);
  height: calc(var(--font-size-xs) + 6px);
  width: calc(var(--font-size-xs) + 6px);
}

lens-search-bar-multiple::part(query-delete-button):hover {
  border: solid var(--orange);
}

lens-search-bar-multiple::part(query-delete-button-value) {
  font-size: var(--font-size-xxs);
  margin: 0 var(--gap-xs) 0 var(--gap-xxs);
}

lens-search-bar-multiple::part(query-delete-button-item) {
  font-size: var(--font-size-xs);
  position: absolute;
  top: -6px;
  right: -10px;
  border: solid 2px var(--white);
}

lens-search-bar-multiple::part(query-delete-button-group) {
  font-size: var(--font-size-s);
  height: calc(var(--font-size-s) + 10px);
  width: calc(var(--font-size-s) + 10px);
}


/**
* Lens search Button in multiple searchbar mode
*/


lens-search-bar-multiple::part(lens-search-button) {
  margin-left: auto;
  margin-right: 45px;
}

